<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="refresh">Refresh</string>
    <string name="app_name">Sound4u</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!-- First Access Activity -->
    <string name="title_activity_first_access">Login</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <!-- Login Activity -->
    <string name="title_activity_login">Login</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="login_button_label">Login</string>
    <!-- Sign up Activity -->
    <string name="title_activity_singup">Signup</string>
    <string name="password_first_hint">Insert password</string>
    <string name="password_second_hint">Insert again</string>
    <!-- Add Info Activity -->
    <string name="title_activity_add_info">Additional Info</string>
    <string name="email_label">Email</string>
    <string name="name_label">Name</string>
    <string name="surname_label">Surname</string>
    <string name="birthdate_label">Birth Date</string>
    <string name="birthplace_label">Birth Place</string>
    <string name="birthdate_hint">GG/MM/AAAA</string>
    <string name="add_info_button">Add Info</string>
    <string name="skip_label">Skip</string>
    <!-- Player Activity -->
    <string name="equalizer_button">equalizer</string>
    <string name="download_button">download</string>
    <!-- Error messages -->
    <string name="mandatory_field_error">The field %1$s is mandatory</string>
    <string name="wrong_credential_error">Wrong credentials! Please try again.</string>
    <string name="passwords_equals">Passwords don\'t match</string>
    <string name="username_already_used">%1$s already exists in Sound4u</string>
    <!-- To reorganize -->
    <string name="title_activity_my_gifts">Gifts</string>
    <string name="title_activity_player">Player</string>
    <string name="action_search">search sound</string>
    <string name="user_search_suggestion">User search</string>
    <string name="title_activity_sound_search_results">SoundSearchResultActivity</string>
    <string name="sound_search_suggestion">Title or Artist</string>
    <string name="string_constant_initializing">example</string>
    <string name="title_gift_list">Gifts</string>
    <string name="title_gift_detail">Gift Detail</string>
    <string name="title_activity_sound_search">Soundcloud Search</string>
    <string name="title_activity_user_search">Users</string>
    <string name="logout_label">Logout</string>
    <string name="facebook_button_label">Facebook</string>
    <string name="client_id">1e9034524a004460783bb4d4ba024ffb</string>
    <!-- Gift List View -->
    <string name="placeholder_sender">Sender\'s Name</string>
    <string name="placeholder_to"> sent to </string>
    <string name="placeholder_receiver">Receiver\'s Name</string>
    <string name="placeholder_title">Title</string>
    <string name="placeholder_artist">Artist</string>
    <string name="empty_list_message">No Gift Found!</string>
    <string name="search_title">Search in Soundcloud</string>
    <string name="search_content_description">search by title or author</string>
    <string name="btn_send">Send To..</string>
    <!-- User List View -->
    <string name="placeholder_username">Username</string>
    <string name="title_activity_adding_gift_text">Adding Gift Text</string>
    <string name="placeholder_full_name">Full Name</string>
    <string name="empty_gift_list_message">You have no gifts!</string>
    <string name="before_gift_sender_name">Gift by</string>
    <string name="search_zero_results">No results found.</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_sharing_gift">SharingGiftActivity</string>
    <string name="title_activity_facebook_connect">FacebookConnect</string>
    <string name="app_id">1379605065621911</string>
    <string name="notification_player_message">Sound4u is playing...</string>
    <!-- Confirm Dialog -->
    <string name="dialog_title">The sound has no stream. Do you want to send it anyway?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="help_login_explanation">Sound4u allows you to dedicate Soundcloud songs to other soundcloud users. In
        order to use the application, you must have an account on Soundcloud. If you don\'t have one you can create it
        by launching the application and by following instructions.
    </string>
    <string name="help_title">Sound4u Help</string>
    <string name="help_gift_definition_title">What is a Gift?</string>
    <string name="help_gift_explanation">A gift is a Soundcloud song which you can listen on Sound4u player. You can
        send gifts to other Soundcloud users. You can chek if someone sent a gift to you on the first frame of Sound4u,
        called \'Gifts\'.
    </string>
    <string name="help_listening_gift_title">How can I listen to one of my gifts?</string>
    <string name="help_listening_gift">You can do it when you are in the first frame of the application: a list of all
        your gifts is showed and by clicking on one of those gifts you will open the Sound4u player.
    </string>
    <string name="help_sending_gift_title">How can I send a gift to my friend?</string>
    <string name="help_sending_gift">Once you\'re in the player frame, you have to click on the \'Send to..\' button.
        You will open the Search User Frame in which you can search for Soundcloud users by typing a name or a username.
        By clicking on a user you will automatically send the gift to that user. After that you can make your Facebook
        friends know that you\'re using Sound4u by sharing a post about the gift.
    </string>
    <string name="help_soundsearch_button">Search on Soundcloud button: by clicking this you will open the Search page
        for searching all Soundcloud songs by title or artist.
    </string>
    <string name="help_gift_button">My Gifts button: it will open the page where you can check all your sent and
        received gifts.
    </string>
    <string name="help_refresh_button">Refresh button: it will reload all your gifts.</string>
    <string name="help_eq_button">Equalizer button: it shows the player equalizer where you can change some player
        settings. Click again to go back to the player.
    </string>

</resources>
