<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:orientation="vertical"
    android:padding="3dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.polimi.dima.sound4u.activity.HelpActivity"
    tools:ignore="MergeRootFrame"
        android:background="#000000">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_title"
            android:layout_margin="3dp"
            android:id="@+id/textView"
            android:layout_gravity="left|top"
            style="@style/style_label"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_login_explanation"
            android:layout_margin="3dp"
            android:id="@+id/textView"
            android:layout_gravity="left|top"
            style="@style/style_little_label"
            />
    <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_margin="2dp"
            android:background="#FFFFFF"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_gift_definition_title"
            android:layout_margin="3dp"
            android:id="@+id/textView"
            android:layout_gravity="left|top"
            style="@style/style_label"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_gift_explanation"
            android:layout_margin="3dp"
            android:id="@+id/textView"
            android:layout_gravity="left|top"
            style="@style/style_little_label"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_listening_gift_title"
            android:layout_margin="3dp"
            android:id="@+id/textView"
            android:layout_gravity="left|top"
            style="@style/style_label"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_listening_gift"
            android:layout_margin="3dp"
            android:id="@+id/textView"
            android:layout_gravity="left|top"
            style="@style/style_little_label"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_sending_gift_title"
            android:layout_margin="3dp"
            android:id="@+id/textView"
            android:layout_gravity="left|top"
            style="@style/style_label"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_sending_gift"
            android:layout_margin="3dp"
            android:id="@+id/textView"
            android:layout_gravity="left|top"
            style="@style/style_little_label"
            />
    <View
            android:layout_width="match_parent"
            android:layout_margin="2dp"
            android:layout_height="0.2dp"
            android:background="#FFFFFF"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:src="@drawable/search_soundcloud"
        android:background="#000000"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_soundsearch_button"
            android:layout_margin="3dp"
            android:id="@+id/textView"
            android:layout_gravity="left|top"
            style="@style/style_little_label"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:src="@drawable/ic_gifts"
            android:background="#000000"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_gift_button"
            android:layout_margin="3dp"
            android:id="@+id/textView"
            android:layout_gravity="left|top"
            style="@style/style_little_label"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:src="@drawable/ic_refresh"
            android:background="#000000"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_refresh_button"
            android:layout_margin="3dp"
            android:id="@+id/textView"
            android:layout_gravity="left|top"
            style="@style/style_little_label"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:src="@drawable/eq_button"
            android:background="#000000"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_eq_button"
            android:layout_margin="3dp"
            android:id="@+id/textView"
            android:layout_gravity="left|top"
            style="@style/style_little_label"/>
        </LinearLayout>
</ScrollView>
        </LinearLayout>
