<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".SoundSearchActivity"
              android:orientation="vertical">

    <!-- Search Bar Container -->
    <LinearLayout   android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal"
                    android:id="@+id/search_bar_container"
                    android:background="@color/grey">

        <!-- Search Dialog -->
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_text_sound_search"
                android:layout_weight="3"
                android:hint="@string/sound_search_suggestion"/>

        <!-- Search Button -->
        <ImageButton
                android:contentDescription="@string/search_content_description"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:id="@+id/btn_sound_search"
                android:src="@drawable/ic_action_search"/>

    </LinearLayout>

    <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@android:id/list"
            android:layout_gravity="center_horizontal"
            tools:listitem="@layout/sound_list_item"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/red"
            android:layout_gravity="center"
            android:id="@android:id/empty"
            android:text="@string/empty_list_message"/>

</LinearLayout>